feat(plugin, docs): add support for Spark Operator app jars and image compliance
- Introduced Spark Operator-specific app staging in `SparkPlatformPlugin`.
- Added support for staging app jars at `/opt/spark/app/app.jar` and classpath configuration.
- Enhanced compliance with Spark Kubernetes image contracts, including maintaining `/opt/entrypoint.sh` entrypoint.
- Updated related documentation and examples to reflect Spark Operator-compatible workflows.